fixes bottom bar dots styling on mobile

--- a/client/components/BottomBar/index.sass
+++ b/client/components/BottomBar/index.sass
@@ -17,7 +17,8 @@
     right: -5px
     top: 2px
     @media only screen and (max-width: 475px)
-      top: 0
+      top: -2px
+      right: -7px
   &-wrapper
     padding: 10px 20px
     display: flex
